Fixing the current code

--- a/test-output/old/InetBankingV1/methods.html
+++ b/test-output/old/InetBankingV1/methods.html
@@ -1,70 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>InetBankingV1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:33:26</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.selEasy.testCases.Intermediate.Progress_Bar@6497b078]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="a38269">  <td>21/06/13 16:33:36</td>   <td>10629</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Progress_Bar.test()[pri:0, instance:com.selEasy.testCases.Intermediate.Progress_Bar@6497b078]">test</td> 
-  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:33:56</td>   <td>30679</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.selEasy.testCases.Intermediate.Progress_Bar@6497b078]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:33:57</td>   <td>31464</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.selEasy.testCases.Intermediate.Data_list_filter@41c2284a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="7bbcae">  <td>21/06/13 16:34:07</td>   <td>41634</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Data_list_filter.test()[pri:0, instance:com.selEasy.testCases.Intermediate.Data_list_filter@41c2284a]">test</td> 
-  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:34:33</td>   <td>67774</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.selEasy.testCases.Intermediate.Data_list_filter@41c2284a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:34:34</td>   <td>68517</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.selEasy.testCases.Intermediate.Input_Form_with_validation@53aad5d5]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="fea1ea">  <td>21/06/13 16:34:44</td>   <td>78581</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Input_Form_with_validation.test()[pri:0, instance:com.selEasy.testCases.Intermediate.Input_Form_with_validation@53aad5d5]">test</td> 
-  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:35:07</td>   <td>100870</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.selEasy.testCases.Intermediate.Input_Form_with_validation@53aad5d5]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:35:07</td>   <td>101629</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.Basic.BootStrap_Modal@46fa7c39]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="fbd1f6">  <td>21/06/13 16:35:17</td>   <td>111357</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BootStrap_Modal.test()[pri:0, instance:com.inetbanking.testCases.Basic.BootStrap_Modal@46fa7c39]">test</td> 
-  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:35:42</td>   <td>135874</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.Basic.BootStrap_Modal@46fa7c39]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:35:42</td>   <td>136635</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.Basic.Check_Box_Demo@1fb700ee]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="e2a091">  <td>21/06/13 16:35:52</td>   <td>146418</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Check_Box_Demo.test()[pri:0, instance:com.inetbanking.testCases.Basic.Check_Box_Demo@1fb700ee]">test</td> 
-  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:36:00</td>   <td>153877</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.Basic.Check_Box_Demo@1fb700ee]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:36:00</td>   <td>154726</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.Basic.Java_Scritps_Alerts@4f67eb2a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="da768f">  <td>21/06/13 16:36:11</td>   <td>164874</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Java_Scritps_Alerts.test()[pri:0, instance:com.inetbanking.testCases.Basic.Java_Scritps_Alerts@4f67eb2a]">test</td> 
-  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:36:32</td>   <td>186750</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.Basic.Java_Scritps_Alerts@4f67eb2a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:36:33</td>   <td>187545</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.Basic.Bootstrap_Alerts@4a668b6e]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="8c8dcf">  <td>21/06/13 16:36:43</td>   <td>197167</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bootstrap_Alerts.test()[pri:0, instance:com.inetbanking.testCases.Basic.Bootstrap_Alerts@4a668b6e]">test</td> 
-  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:36:49</td>   <td>203043</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.Basic.Bootstrap_Alerts@4a668b6e]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:36:49</td>   <td>203788</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.Basic.Radio_Button_Demo@5f683daf]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="869769">  <td>21/06/13 16:37:00</td>   <td>213822</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Radio_Button_Demo.test()[pri:0, instance:com.inetbanking.testCases.Basic.Radio_Button_Demo@5f683daf]">test</td> 
-  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:37:07</td>   <td>221488</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.Basic.Radio_Button_Demo@5f683daf]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:37:08</td>   <td>222208</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.Basic.Select_Drop_Down@78ffe6dc]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="ceadd4">  <td>21/06/13 16:37:18</td>   <td>232063</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Select_Drop_Down.test()[pri:0, instance:com.inetbanking.testCases.Basic.Select_Drop_Down@78ffe6dc]">test</td> 
-  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:37:31</td>   <td>245098</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.Basic.Select_Drop_Down@78ffe6dc]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:37:32</td>   <td>246044</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.Basic.Simple_Form_Demo@8317c52]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="aed86c">  <td>21/06/13 16:37:41</td>   <td>255680</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Simple_Form_Demo.test()[pri:0, instance:com.inetbanking.testCases.Basic.Simple_Form_Demo@8317c52]">test</td> 
-  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:38:07</td>   <td>281067</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.Basic.Simple_Form_Demo@8317c52]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:38:08</td>   <td>281839</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.Basic.WindowsPopup@76f2bbc1]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="b2dba3">  <td>21/06/13 16:38:18</td>   <td>291808</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WindowsPopup.test()[pri:0, instance:com.inetbanking.testCases.Basic.WindowsPopup@76f2bbc1]">test</td> 
-  <td>main@1930240356</td>   <td></td> </tr>
-<tr bgcolor="d88cf5">  <td>21/06/13 16:38:47</td>   <td>321672</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.Basic.WindowsPopup@76f2bbc1]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1930240356</td>   <td></td> </tr>
+<tr bgcolor="e98b7c">  <td>21/06/17 09:14:14</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.Basic.Bootstrap_Alerts@5f16132a]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@90567568</td>   <td></td> </tr>
+<tr bgcolor="a38269">  <td>21/06/17 09:14:38</td>   <td>23166</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Bootstrap_Alerts.test()[pri:0, instance:com.inetbanking.testCases.Basic.Bootstrap_Alerts@5f16132a]">test</td> 
+  <td>main@90567568</td>   <td></td> </tr>
+<tr bgcolor="e98b7c">  <td>21/06/17 09:15:13</td>   <td>58109</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.Basic.Bootstrap_Alerts@5f16132a]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@90567568</td>   <td></td> </tr>
 </table>
