--- a/test-output/old/InetBankingV1/classes.html
+++ b/test-output/old/InetBankingV1/classes.html
@@ -4,7 +4,7 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.inetbanking.testCases.Basic.BootStrap_Modal</td>
+<td>com.inetbanking.testCases.Basic.Select_Drop_Down</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
