--- a/test-output/old/InetBankingV1/methods-alphabetical.html
+++ b/test-output/old/InetBankingV1/methods-alphabetical.html
@@ -1,10 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>InetBankingV1</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="e98b7c">  <td>21/06/24 10:24:38</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.Basic.BootStrap_Modal@5f16132a]">&gt;&gt;setup</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@90567568</td>   <td></td> </tr>
-<tr bgcolor="e98b7c">  <td>21/06/24 10:25:47</td>   <td>68532</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.Basic.BootStrap_Modal@5f16132a]">&lt;&lt;tearDown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@90567568</td>   <td></td> </tr>
-<tr bgcolor="a38269">  <td>21/06/24 10:24:49</td>   <td>10572</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="BootStrap_Modal.test()[pri:0, instance:com.inetbanking.testCases.Basic.BootStrap_Modal@5f16132a]">test</td> 
-  <td>main@90567568</td>   <td></td> </tr>
+<tr bgcolor="e98b7c">  <td>21/06/24 22:58:47</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseClass.setup(java.lang.String)[pri:0, instance:com.inetbanking.testCases.Basic.Select_Drop_Down@69fb6037]">&gt;&gt;setup</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@131872530</td>   <td></td> </tr>
+<tr bgcolor="e98b7c">  <td>21/06/24 22:59:05</td>   <td>17535</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseClass.tearDown()[pri:0, instance:com.inetbanking.testCases.Basic.Select_Drop_Down@69fb6037]">&lt;&lt;tearDown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@131872530</td>   <td></td> </tr>
+<tr bgcolor="a38269">  <td>21/06/24 22:58:57</td>   <td>10283</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Select_Drop_Down.test()[pri:0, instance:com.inetbanking.testCases.Basic.Select_Drop_Down@69fb6037]">test</td> 
+  <td>main@131872530</td>   <td></td> </tr>
 </table>
